issue2+6完成, 末影箱同步